Fix for jumpy nav collapse

--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -102,7 +102,10 @@
 #main-nav {
   padding: 0;
   width: 100%;
-  margin: 45px -40px;
+
+  .nav-main ul {
+    padding-bottom: 20px;
+  }
 
   ul {
     margin: 0;
